<resources>
    <string name="cannot_be_empty">不可为空</string>

    <string name="home_page">首页</string>
    <string name="home_system">体系</string>
    <string name="official_account">博客</string>
    <string name="home_plaza">广场</string>
    <string name="home_mine">我的</string>
    <string name="home_project">项目</string>
    <string name="home_navigation">导航</string>

    <string name="anonymous">匿名</string>
    <string name="stick">置顶</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>